# chehov

crates/api/: Cargo.toml
crates/api/src/: main.rs
crates/index/: Cargo.toml
crates/index/src/: fs.rs  lib.rs  partition.rs
crates/index/src/segment/: disk.rs  memory.rs  mod.rs
