[package]
name = "index"
version = "0.1.0"
edition = "2024"

[dependencies]
adler2 = "2.0.1"
base32 = "0.5.1"
bitflags = "2.10.0"
bloomfilter = "3.0.1"
futures-lite = "2.6.1"
fxhash = "0.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
snafu = "0.8.9"
snappy = "0.4.0"
tokio = { version = "1.48.0", features = ["io-std", "io-util", "macros", "rt"] }
tracing = "0.1.41"
zerocopy = { version = "0.8.27", features = ["derive", "simd"] }

[features]
default = ["fs"]
fs = ["tokio/fs"]

[dev-dependencies]
tempfile = "3.23.0"
